--- a/config.json
+++ b/config.json
@@ -1,30 +1,20 @@
 {
   "withEmail": {
     "account": "3450047248@qq.com",
-    "token": "iyjgokhgzybudajj",
+    "token": "YOURTOKEN",
     "host": "smtp.qq.com",
     "port": "25"
   },
   "stu_info": [
     {
-      "name": "刘继坤",
-      "phone": "15236176076",
-      "province": "河南省",
-      "city": "洛阳市",
-      "college": "计算机学院",
-      "account": "183411010125",
-      "passwd": "DzgqhP1l@6",
-      "email": "silo1999@163.com"
-    },
-    {
-      "name": "高一宁",
-      "phone": "18841268762",
-      "province": "辽宁省",
-      "city": "鞍山市",
-      "college": "自动化学院",
-      "account": "193407020102",
-      "passwd": "948203253Gyn",
-      "email": "255327317@qq.com"
+      "name": "NAME",
+      "phone": "PHONE NUMBER",
+      "province": "PROVINCE",
+      "city": "CITY",
+      "college": "COLLEGE",
+      "account": "STUDENT NUMBER",
+      "passwd": "PASSWD",
+      "email": "EMAIL"
     }
   ]
 }
