--- a/config.json
+++ b/config.json
@@ -7,16 +7,6 @@
   },
   "stu_info": [
     {
-      "name": "刘继坤",
-      "phone": "15236176076",
-      "province": "河南省",
-      "city": "洛阳市",
-      "college": "计算机学院",
-      "account": "183411010125",
-      "passwd": "DzgqhP1l@6",
-      "email": "silo1999@163.com"
-    },
-    {
       "name": "高一宁",
       "phone": "18841268762",
       "province": "辽宁省",
@@ -24,7 +14,8 @@
       "college": "自动化学院",
       "account": "193407020102",
       "passwd": "948203253Gyn",
-      "email": "255327317@qq.com"
+      "email": "255327317@qq.com",
+      "uuid": "431246316"
     }
   ]
 }
