--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,6 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-<<<<<<< HEAD
 vendor/
-=======
-# vendor/
->>>>>>> 73f7a7a4b3134b68b63cd66b224bccbcfa969cc1
 *.idea
+*.vscode
