更新httpserver控制，多人打卡优化

--- a/config.json
+++ b/config.json
@@ -1,33 +1,24 @@
 {
-  "withEmail": {
-    "enabled": true,
-    "account": "YOUR_LOGIN_ID",
-    "token": "YOUR_LOGIN_TOKEN",
-    "host": "xxx.xx.com",
-    "port": "465"
-  },
   "stu_info": [
     {
-      "name": "YOUR_NAME",
-      "phone": "PHONE_NUMBER",
-      "province": "XX省",
-      "city": "XX市",
-      "college": "XXX学院",
-      "account": "XXXX",
-      "passwd": "XXXX",
-      "email": "XXX@XX.com",
-      "uuid": "XXXXXXX"
+      "name": "刘继坤",
+      "phone": "15236176076",
+      "province": "辽宁省",
+      "city": "沈阳市",
+      "college": "计算机学院",
+      "account": "183411010125",
+      "passwd": "52biancheng",
+      "email": "690898835@qq.com"
     },
     {
-      "name": "YOUR_NAME",
-      "phone": "PHONE_NUMBER",
-      "province": "XX省",
-      "city": "XX市",
-      "college": "XXX学院",
-      "account": "XXXX",
-      "passwd": "XXXX",
-      "email": "XXX@XX.com",
-      "uuid": "XXXXXXX"
+      "name": "高一宁",
+      "phone": "18841268762",
+      "province": "辽宁省",
+      "city": "沈阳市",
+      "college": "自动化学院",
+      "account": "193407020102",
+      "passwd": "948203253Gyn",
+      "email": "255327317@qq.com"
     }
   ]
 }
