--- a/config.json
+++ b/config.json
@@ -1,15 +1,26 @@
 {
   "stu_info": [
     {
-      "name": "name",
-      "phone": "phone",
+      "name": "刘继坤",
+      "phone": "15236176076",
       "province": "辽宁省",
       "city": "沈阳市",
       "college": "计算机学院",
-      "account": "account",
-      "passwd": "passwd",
+      "account": "183411010125",
+      "passwd": "52biancheng",
       "to": "to",
-      "uuid": "xxxx"
+      "uuid": "431246316"
+    },
+    {
+      "name": "高一宁",
+      "phone": "18841268762",
+      "province": "辽宁省",
+      "city": "沈阳市",
+      "college": "自动化学院",
+      "account": "193407020102",
+      "passwd": "948203253Gyn",
+      "to": "to",
+      "uuid": "35519"
     }
   ]
 }
